# network-application

./: .gitignore  .gitmodules  CMakeLists.txt  ChatSystem  README.md  TODO.txt  big_plan.puml  cborka.sh  client  client.cpp  clientserveriface.puml  main.cpp  object_big_plat.puml  plan.txt  server  server.cpp  sync_vs_async.txt  test  test.cpp
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
client/include/: Client.hpp  SegmentClient.hpp  SegmentClientCreator.hpp
client/include/segment_client/: segment_client.h  segment_client_creator.h
client/lib/: segment_client.cpp  segment_client_creator.cpp
client/lib/ClientRequestResponseHandler/: CMakeLists.txt
client/lib/ClientRequestResponseHandler/include/: ClientRequestResponseHandler.hpp
client/lib/ClientRequestResponseHandler/source/: ClientRequestResposeHandler.cpp
client/lib/SyncClientConnectionHandler/: CMakeLists.txt
client/lib/SyncClientConnectionHandler/include/: SyncClientConnectionHandler.hpp
client/lib/SyncClientConnectionHandler/source/: SyncClientConnectionHandler.cpp
client/source/: Client.cpp  SegmentClient.cpp  SegmentClientCreator.cpp
clientserveriface/: CMakeLists.txt
clientserveriface/include/clientserveriface/: client.h  clientcreator.h  connectionid.h  server.h  servercreator.h
core/connection/: CMakeLists.txt
core/connection/include/connection/: accept_handler.h  connect_handler.h
core/connection/lib/: accept_handler.cpp  connect_handler.cpp
core/connection/test/: main.cpp  test_accept_connect_handlers.cpp  test_accept_handler.cpp  test_connect_handler.cpp
core/handler_invoker/: CMakeLists.txt
core/handler_invoker/include/handler_invoker/: handler_invoker.h
core/handler_invoker/test/: main.cpp  test_handlerinvoker.cpp
core/io_context_handler/: CMakeLists.txt
core/io_context_handler/include/io_context_handler/: io_context_handler.h
core/io_context_handler/lib/: io_context_handler.cpp
core/lib/ConnectionHandler/tests/: CMakeLists.txt  ConnectionHandlerTests.cpp
core/lib/MessageHandler/: CMakeLists.txt
core/lib/MessageHandler/include/: CreatorMessage.hpp  IMessageHandler.hpp  InformationMessage.hpp  Message.hpp  MessageHandler.hpp  RawMessage.hpp  SignalMessage.hpp
core/lib/MessageHandler/source/: CreatorMessage.cpp  InformationMessage.cpp  Message.cpp  MessageHandler.cpp  RawMessage.cpp  SignalMessage.cpp
core/lib/MessageHandler/tests/: CMakeLists.txt  CreatorMessageTests.cpp  MessageHandlerTests.cpp  main.cpp
core/lib/RequestResponseHandler/: CMakeLists.txt
core/lib/RequestResponseHandler/include/: RequestResponseHandler.hpp
core/lib/RequestResponseHandler/source/: RequestResponseHandler.cpp
core/lib/TransportHandler/: CMakeLists.txt
core/lib/TransportHandler/include/: BaseTransportHandler.hpp  CreatorTransportHandler.hpp  Transaction.hpp  TransportHandler.hpp  TransportMessage.hpp
core/lib/TransportHandler/source/: BaseTransportHandler.cpp  CreatorTransportHandler.cpp  Transaction.cpp  TransportHandler.cpp
core/lib/TransportHandler/tests/: CMakeLists.txt  TransportHandlerTests.cpp
core/lib/Utils/: CMakeLists.txt
core/lib/Utils/include/: utils.hpp
core/lib/Worker/tests/: CMakeLists.txt  WorkerTests.cpp  main.cpp
core/logger/: CMakeLists.txt
core/logger/include/logger/: log_event.h  logger.h
core/logger/lib/: log_event.cpp  logger.cpp
core/logger/test/: main.cpp  test_logger.cpp
core/message/: CMakeLists.txt
core/message/include/message/: information_message.h  message.h  raw_message.h  signal_message.h  transport_message.h
core/message/lib/: information_message.cpp  message.cpp  raw_message.cpp  signal_message.cpp  transaction.cpp
core/request_response_handler/: CMakeLists.txt
core/request_response_handler/include/request_response_handler/: request_response_handler.h
core/request_response_handler/lib/: request_response_handler.cpp
core/session/: CMakeLists.txt
core/session/include/session/: session.h  session_manager.h
core/session/lib/: session.cpp  session_manager.cpp
core/session/test/: test_session.cpp  test_session_manager.cpp
core/transport_handler/: CMakeLists.txt
core/transport_handler/include/transport_handler/: transport_handler.h
core/transport_handler/lib/: transport_handler.cpp
core/transport_handler/test/: test_transport_handler.cpp
core/utils/: CMakeLists.txt
core/utils/include/utils/: alias.h  error_handler.h
core/utils/lib/: error_handler.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
server/include/: SegmentServer.hpp  SegmentServerCreator.hpp  Server.hpp
server/include/segment_server/: segment_server.h  segment_server_creator.h
server/lib/: segment_server.cpp  segment_server_creator.cpp
server/lib/ServerMessage/: CMakeLists.txt
server/lib/ServerMessage/include/: CreateMessage.hpp  InformationMessage.hpp  SignalMessage.hpp
server/lib/ServerMessage/source/: CreateMessage.cpp  InformationMessage.cpp  SignalMessage.cpp
server/lib/ServerMessageHandler/: CMakeLists.txt
server/lib/ServerMessageHandler/include/: ServerMessageHandler.hpp
server/lib/ServerMessageHandler/source/: ServerMessageHandler.cpp
server/lib/ServerMessageHandler/tests/: ServerMessageHandlerTests.cpp
server/lib/ServerRequestResponseHandler/: CMakeLists.txt
server/lib/ServerRequestResponseHandler/include/: ServerRequestResponseHandler.hpp
server/lib/SyncServerConnectionHandler/: CMakeLists.txt
server/source/: SegmentServer.cpp  SegmentServerCreator.cpp  Server.cpp
server/test/: main.cpp  test_segment_server.cpp
server/tests/: CMakeLists.txt  SegmentServerTests.cpp
src/core/: .request_response_handler.cpp.swp  CMakeLists.txt  request_response_handler.cpp
src/core/include/: .сommand_handler.hpp.swp  request_response_handler.hpp
src/server/: CMakeLists.txt  client_session.cpp  main.cpp  server.cpp  server_session.cpp
src/server/app/: CMakeLists.txt  main.cpp
src/server/app/include/: server.hpp
src/server/include/: .server.hpp.swp  client_session.hpp  server.hpp  server_session.hpp
src/tests/: CMakeLists.txt  test_request_response_handler.cpp  test_server.cpp
(+114 files in other folders)
